# pohms

./: .gitattributes  .gitignore  README.md  explore.py  export.pkl  pohms.py  pyproject.toml  setup.py
models/: resnet101-97acc.pkl
