[tool.poetry]
name = "pohms"
version = "2019.0.1.0"
description = "Cli to predict resistor images"
authors = ["Vik Borges <v1k@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
fastai = "^1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
